--- a/index.html
+++ b/index.html
@@ -252,22 +252,22 @@ I sincerely admit ! Not everything thing you can see on the website was develope
     <h2 class="section__title">Gallery</h2>
     <span class="section__subtitle">Mock Interview Panelist & Industry Expert (Invited, 2024)</span>
     <div class="slider">
-      <div><img src="assets/img/pic2.JPG" alt=""></div>
-      <div><img src="assets/img/pic3.JPG" alt=""></div>
-      <div><img src="assets/img/pic20.JPG" alt=""></div>
+      <div><img src="assets/img/pic2.jpg" alt=""></div>
+      <div><img src="assets/img/pic3.jpg" alt=""></div>
+      <div><img src="assets/img/pic20.jpg" alt=""></div>
       <div><img src="assets/img/pic5.JPG" alt=""></div>
-      <div><img src="assets/img/pic6.JPG" alt=""></div>
-      <div><img src="assets/img/pic7.JPG" alt=""></div>
-      <div><img src="assets/img/pic8.JPG" alt=""></div>
-      <div><img src="assets/img/pic9.JPG" alt=""></div>
-      <div><img src="assets/img/pic10.JPG" alt=""></div>
-      <div><img src="assets/img/pic12.JPG" alt=""></div>
-      <div><img src="assets/img/pic13.JPG" alt=""></div>
-      <div><img src="assets/img/pic14.JPG" alt=""></div>
-      <div><img src="assets/img/pic17.JPG" alt=""></div>
-      <div><img src="assets/img/pic19.JPG" alt=""></div>
-      <div><img src="assets/img/pic11.JPG" alt=""></div>
-      <div><img src="assets/img/pic21.JPG" alt=""></div>
+      <div><img src="assets/img/pic6.jpg" alt=""></div>
+      <div><img src="assets/img/pic7.jpg" alt=""></div>
+      <div><img src="assets/img/pic8.jpg" alt=""></div>
+      <div><img src="assets/img/pic9.jpg" alt=""></div>
+      <div><img src="assets/img/pic10.jpg" alt=""></div>
+      <div><img src="assets/img/pic12.jpg" alt=""></div>
+      <div><img src="assets/img/pic13.jpg" alt=""></div>
+      <div><img src="assets/img/pic14.jpg" alt=""></div>
+      <div><img src="assets/img/pic17.jpg" alt=""></div>
+      <div><img src="assets/img/pic19.jpg" alt=""></div>
+      <div><img src="assets/img/pic11.jpg" alt=""></div>
+      <div><img src="assets/img/pic21.jpg" alt=""></div>
     </div>
     </div>
 
