--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ I sincerely admit ! Not everything thing you can see on the website was develope
           </div>
           <div class="about__info">
             <div class="about__buttons">
-              <a href="assets\file\Raghavendra resume.pdf" download target="_blank" class="button button--flex">
+              <a href="assets\file\Raghavendra Resume best.pdf" download target="_blank" class="button button--flex">
                 Download Resume<i class="uil uil-download-alt button__icon"></i>
               </a>
             </div>
